test/expected/explain_hd.out
explain short double x
              ^
15: error: "short double" is illegal for built-in type
